@@ -6183,25 +6183,29 @@ namespace libtorrent
 		m_completed_time = time(0);
 
 		// disconnect all seeds
-		// TODO: 1 should disconnect all peers that have the pieces we have
-		// not just seeds. It would be pretty expensive to check all pieces
-		// for all peers though
-		std::vector<peer_connection*> seeds;
-		for (peer_iterator i = m_connections.begin();
-			i != m_connections.end(); ++i)
+		if (settings().close_redundant_connections)
 		{
-			peer_connection* p = *i;
-			TORRENT_ASSERT(p->associated_torrent().lock().get() == this);
-			if (p->upload_only())
+			// TODO: 1 should disconnect all peers that have the pieces we have
+			// not just seeds
+			// not just seeds. It would be pretty expensive to check all pieces
+			// for all peers though
+			std::vector<peer_connection*> seeds;
+			for (peer_iterator i = m_connections.begin();
+				i != m_connections.end(); ++i)
 			{
+				peer_connection* p = *i;
+				TORRENT_ASSERT(p->associated_torrent().lock().get() == this);
+				if (p->upload_only())
+				{
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_ERROR_LOGGING
-				p->peer_log("*** SEED, CLOSING CONNECTION");
+					p->peer_log("*** SEED, CLOSING CONNECTION");
 #endif
-				seeds.push_back(p);
+					seeds.push_back(p);
+				}
 			}
+			std::for_each(seeds.begin(), seeds.end()
+				, boost::bind(&peer_connection::disconnect, _1, errors::torrent_finished, 0));
 		}
-		std::for_each(seeds.begin(), seeds.end()
-			, boost::bind(&peer_connection::disconnect, _1, errors::torrent_finished, 0));
 
 		if (m_abort) return;
 
